# G-score

./: README.md  data_processing.py  decision_tree.py  experiment.py  experiment_script.py  gridsearch.py  gridsearch_results.txt  models.py  pyproject.toml  results.csv  test.py  train.py
results/: create_mock_data.py  mock_experiment_data.csv  plot_results.ipynb  statistical_analysis.ipynb
results/data/: model_performance_results_20241029_050347.csv  presentation.csv
training/: data_processing.py  train.py
