[tool.poetry]
name = "g-score"
version = "0.1.0"
description = ""
authors = ["Cato de Kruif <c.e.a.dekruif@student.utwente.nl>, Darrell tufto <d.tufto@student.utwente.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
