[tool.poetry]
name = "g-score"
version = "0.1.0"
description = ""
authors = ["Cato de Kruif <c.e.a.dekruif@student.utwente.nl>, Darrell tufto <d.tufto@student.utwente.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyrapl = "0.2.3.1"
pandas = "2.2.3"
scikit-learn = "1.5.2"
huggingface = "0.0.1"
datasets = "3.0.1"
pillow = "10.4.0"
pymongo = "4.10.1"
matplotlib = "3.9.2"
jupyter = "1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
